Incorporating feedback from the API review

--- a/specification/cognitiveservices/data-plane/Language/preview/2022-03-01-preview/examples/SuccessfulAnalyzeTextJobsMultipleTaskSubmitRequest.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2022-03-01-preview/examples/SuccessfulAnalyzeTextJobsMultipleTaskSubmitRequest.json
@@ -42,8 +42,7 @@
   "responses": {
     "202": {
       "headers": {
-        "Operation-Location": "{Endpoint}/language/analyze-text/jobs/{jobId}?api-version=2022-03-01-preview",
-        "Location": "{Endpoint}/language/analyze-text/jobs/{jobId}/data?api-version=2022-03-01-preview"
+        "Operation-Location": "{Endpoint}/language/analyze-text/jobs/{jobId}?api-version=2022-03-01-preview"
       }
     }
   }
