updating common.json based on TextAnalytics

--- a/specification/cognitiveservices/data-plane/Language/preview/2021-11-01-preview/analyzeconversations.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2021-11-01-preview/analyzeconversations.json
@@ -23,7 +23,7 @@
     "useSchemePrefix": false,
     "parameters": [
       {
-        "$ref": "textanalytics.json#/parameters/Endpoint"
+        "$ref": "common.json#/parameters/Endpoint"
       }
     ]
   },
@@ -34,16 +34,16 @@
         "description": "Analyzes the input conversation utterance.",
         "parameters": [
           {
-            "$ref": "textanalytics.json#/parameters/ProjectNameQueryParameter"
+            "$ref": "common.json#/parameters/ProjectNameQueryParameter"
           },
           {
-            "$ref": "textanalytics.json#/parameters/DeploymentNameQueryParameter"
+            "$ref": "common.json#/parameters/DeploymentNameQueryParameter"
           },
           {
             "$ref": "#/parameters/ConversationAnalysisOptions"
           },
           {
-            "$ref": "textanalytics.json#/parameters/ApiVersionParameter"
+            "$ref": "common.json#/parameters/ApiVersionParameter"
           }
         ],
         "consumes": [
@@ -62,7 +62,7 @@
           "default": {
             "description": "Error response.",
             "schema": {
-              "$ref": "textanalytics.json#/definitions/ErrorResponse"
+              "$ref": "common.json#/definitions/ErrorResponse"
             }
           }
         },
