fix naming consistency (#1)
* naming updates

* fix typo

--- a/specification/cognitiveservices/data-plane/Language/preview/2022-03-01-preview/textanalytics.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2022-03-01-preview/textanalytics.json
@@ -267,8 +267,8 @@
         "Healthcare",
         "ExtractiveSummarization",
         "CustomEntityRecognition",
-        "CustomSingleClassification",
-        "CustomMultiClassification"
+        "CustomSingleLabelClassification",
+        "CustomMultiLabelClassification"
       ],
       "x-ms-enum": {
         "name": "AnalyzeTextLROTaskKind",
@@ -303,8 +303,8 @@
         "HealthcareLROResults",
         "ExtractiveSummarizationLROResults",
         "CustomEntityRecognitionLROResults",
-        "CustomSingleClassificationLROResults",
-        "CustomMultiClassificationLROResults"
+        "CustomSingleLabelClassificationLROResults",
+        "CustomMultiLabelClassificationLROResults"
       ],
       "x-ms-enum": {
         "name": "AnalyzeTextLROResultsKind",
@@ -640,7 +640,7 @@
         "documents"
       ]
     },
-    "CustomSingleClassificationTaskParameters": {
+    "CustomSingleLabelClassificationTaskParameters": {
       "type": "object",
       "description": "Supported parameters for a Custom Single Classification task.",
       "allOf": [
@@ -652,12 +652,12 @@
         }
       ]
     },
-    "CustomSingleClassificationLROTask": {
+    "CustomSingleLabelClassificationLROTask": {
       "type": "object",
       "description": "Use custom models to classify text into single label taxonomy",
       "properties": {
         "parameters": {
-          "$ref": "#/definitions/CustomSingleClassificationTaskParameters"
+          "$ref": "#/definitions/CustomSingleLabelClassificationTaskParameters"
         }
       },
       "allOf": [
@@ -665,9 +665,9 @@
           "$ref": "#/definitions/AnalyzeTextLROTask"
         }
       ],
-      "x-ms-discriminator-value": "CustomSingleClassification"
+      "x-ms-discriminator-value": "CustomSingleLabelClassification"
     },
-    "CustomSingleClassificationResult": {
+    "CustomSingleLabelClassificationResult": {
       "type": "object",
       "properties": {
         "documents": {
@@ -694,7 +694,7 @@
     "SingleClassificationDocumentResult": {
       "type": "object",
       "properties": {
-        "classification": {
+        "class": {
           "$ref": "#/definitions/ClassificationResult"
         }
       },
@@ -704,7 +704,7 @@
         }
       ],
       "required": [
-        "classification"
+        "class"
       ]
     },
     "ClassificationResult": {
@@ -721,11 +721,11 @@
         "confidenceScore": {
           "type": "number",
           "format": "double",
-          "description": "Confidence score between 0 and 1 of the recognized classification."
+          "description": "Confidence score between 0 and 1 of the recognized class."
         }
       }
     },
-    "CustomMultiClassificationTaskParameters": {
+    "CustomMultiLabelClassificationTaskParameters": {
       "type": "object",
       "description": "Supported parameters for a Custom Multi Classification task.",
       "allOf": [
@@ -737,12 +737,12 @@
         }
       ]
     },
-    "CustomMultiClassificationLROTask": {
+    "CustomMultiLabelClassificationLROTask": {
       "type": "object",
       "description": "Use custom models to classify text into multi label taxonomy",
       "properties": {
         "parameters": {
-          "$ref": "#/definitions/CustomMultiClassificationTaskParameters"
+          "$ref": "#/definitions/CustomMultiLabelClassificationTaskParameters"
         }
       },
       "allOf": [
@@ -750,9 +750,9 @@
           "$ref": "#/definitions/AnalyzeTextLROTask"
         }
       ],
-      "x-ms-discriminator-value": "CustomMultiClassification"
+      "x-ms-discriminator-value": "CustomMultiLabelClassification"
     },
-    "CustomMultiClassificationResult": {
+    "CustomMultiLabelClassificationResult": {
       "type": "object",
       "properties": {
         "documents": {
@@ -779,7 +779,7 @@
     "MultiClassificationDocumentResult": {
       "type": "object",
       "properties": {
-        "classifications": {
+        "class": {
           "type": "array",
           "items": {
             "$ref": "#/definitions/ClassificationResult"
@@ -792,7 +792,7 @@
         }
       ],
       "required": [
-        "classifications"
+        "class"
       ]
     },
     "HealthcareTaskParameters": {
@@ -2574,11 +2574,11 @@
       ],
       "x-ms-discriminator-value": "CustomEntityRecognitionLROResults"
     },
-    "CustomSingleClassificationLROResult": {
+    "CustomSingleLabelClassificationLROResult": {
       "type": "object",
       "properties": {
         "results": {
-          "$ref": "#/definitions/CustomSingleClassificationResult"
+          "$ref": "#/definitions/CustomSingleLabelClassificationResult"
         }
       },
       "allOf": [
@@ -2589,13 +2589,13 @@
       "required": [
         "results"
       ],
-      "x-ms-discriminator-value": "CustomSingleClassificationLROResults"
+      "x-ms-discriminator-value": "CustomSingleLabelClassificationLROResults"
     },
-    "CustomMultiClassificationLROResult": {
+    "CustomMultiLabelClassificationLROResult": {
       "type": "object",
       "properties": {
         "results": {
-          "$ref": "#/definitions/CustomMultiClassificationResult"
+          "$ref": "#/definitions/CustomMultiLabelClassificationResult"
         }
       },
       "allOf": [
@@ -2606,7 +2606,7 @@
       "required": [
         "results"
       ],
-      "x-ms-discriminator-value": "CustomMultiClassificationLROResults"
+      "x-ms-discriminator-value": "CustomMultiLabelClassificationLROResults"
     },
     "EntityLinkingLROResult": {
       "type": "object",
