Using common skip and top parameters

--- a/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/textanalytics.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2022-02-01-preview/textanalytics.json
@@ -160,23 +160,10 @@
             "$ref": "#/parameters/ShowStats"
           },
           {
-            "default": 20,
-            "description": "(Optional) Set the maximum number of results per task. When both top and skip are specified, skip is applied first.",
-            "in": "query",
-            "maximum": 50,
-            "minimum": 1,
-            "name": "top",
-            "type": "integer",
-            "format": "int32"
+            "$ref": "common.json#/parameters/TopParameter"
           },
           {
-            "default": 0,
-            "description": "(Optional) Set the number of elements to offset in the response. When both top and skip are specified, skip is applied first.",
-            "in": "query",
-            "minimum": 0,
-            "name": "skip",
-            "type": "integer",
-            "format": "int32"
+            "$ref": "common.json#/parameters/SkipParameter"
           }
         ],
         "responses": {
